--- a/html-css-kadai_013/index.html
+++ b/html-css-kadai_013/index.html
@@ -20,12 +20,12 @@
         <a href="index.html#contact">CONTACT</a>
       </nav>
 
-        <img src="images/button-menu.png" alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display = 'block'">
+        <img id="menu-sp" src="images/button-menu.png" alt="ナビゲーションを開く" onclick="document.getElementById('nav-sp').style.display = 'block'">
 
       <nav id="nav-sp">
         <ul>
           <li>
-          <img src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display = 'none'">
+          <img id="close" src="images/button-close.png" alt="ナビゲーションを閉じる" onclick="document.getElementById('nav-sp').style.display = 'none'">
           </li>
           <li>
             <a id="logo-sp" href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">
@@ -37,7 +37,6 @@
             <li><a class="menu" href="index.html#contact" onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a></li>
         </ul>
       </nav>
-    </div>
   </header>
 
     <main>
